# fedimint

./: .dockerignore  .gitignore  .typos.toml  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  MINIMINT.md  README.md  deny.toml  flake.nix  justfile  justfile.fedimint.just  test-integration.sh
.cargo/: audit.toml
crypto/picomint-derive-secret/: Cargo.toml
crypto/picomint-derive-secret/src/: lib.rs
devimint/: Cargo.toml
docker-server/: docker-compose.yml
docs/: api.md  database.md  release-process.md  rustdoc-index.md
fedimint-api-client/: Cargo.toml
fedimint-api-client/src/: connection.rs  lib.rs  query.rs  session_outcome.rs  transaction.rs  wire.rs
fedimint-api-client/src/api/: error.rs  global_api.rs  mod.rs  tests.rs
fedimint-api-client/src/api/global_api/: with_cache.rs  with_request_hook.rs
fedimint-cli/: Cargo.toml
fedimint-client/: Cargo.toml
fedimint-client-module/: Cargo.toml
fedimint-connectors/: Cargo.toml
fedimint-core/: Cargo.toml
fedimint-cursed-redb/: Cargo.toml
fedimint-derive/: Cargo.toml
fedimint-eventlog/: Cargo.toml
fedimint-gateway-cli/: Cargo.toml
fedimint-gateway-cli-core/: Cargo.toml
fedimint-gateway-cli-core/src/: lib.rs
fedimint-gateway-cli/src/: main.rs
fedimint-gateway-common/: Cargo.toml
fedimint-gateway-common/src/: lib.rs
fedimint-gateway-daemon/: Cargo.toml
fedimint-gateway-daemon/src/: cli.rs  client.rs  config.rs  db.rs  envs.rs  error.rs  federation_manager.rs  lib.rs  main.rs  public.rs  rpc.rs
fedimint-integration-tests/: Cargo.toml  test.sh
fedimint-integration-tests/src/: cli.rs  env.rs  lnv2.rs  main.rs  mintv2.rs  walletv2.rs
fedimint-lnurl/: Cargo.toml
fedimint-lnurl/src/: lib.rs
fedimint-recurringd/: Cargo.toml
fedimint-recurringd-tests/: Cargo.toml
fedimint-recurringdv2/: Cargo.toml  README.md
fedimint-redb/: Cargo.toml
fedimint-redb/src/: lib.rs  v2.rs
fedimint-server-cli/: Cargo.toml
fedimint-server-cli-core/: Cargo.toml
fedimint-server-cli-core/src/: lib.rs
fedimint-server-cli/src/: main.rs
fedimint-server-daemon/: Cargo.toml
fedimint-server-daemon/src/: cli.rs  lib.rs  main.rs  p2p.rs
fedimint-server-daemon/src/config/: dkg.rs  dkg_g1.rs  dkg_g2.rs  io.rs  mod.rs  peer_handle.rs  setup.rs
fedimint-server-daemon/src/consensus/: api.rs  debug.rs  engine.rs  mod.rs
fedimint-server-daemon/src/consensus/aleph_bft/: network.rs
fedimint-server-daemon/src/net/: mod.rs  p2p_connection.rs  p2p_connector.rs
fedimint-server-daemon/src/ui/: assets.rs  auth.rs  mod.rs  setup.rs
fedimint-server-daemon/src/ui/dashboard/: bitcoin.rs  invite.rs  latency.rs  mod.rs
fedimint-server-daemon/src/ui/dashboard/modules/: lnv2.rs
gateway/fedimint-gatewayv2-cli/: Cargo.toml
gateway/fedimint-gatewayv2-cli-core/: Cargo.toml
gateway/fedimint-gatewayv2-cli-core/src/: lib.rs
gateway/fedimint-gatewayv2-cli/src/: main.rs
modules/picomint-gw-client/: Cargo.toml
modules/picomint-gw-client/src/: api.rs  complete_sm.rs  events.rs  lib.rs  receive_sm.rs  send_sm.rs
picomint-api-client/: Cargo.toml
picomint-api-client/src/: config.rs  lib.rs  query.rs  session_outcome.rs  transaction.rs  wire.rs
picomint-api-client/src/api/: error.rs  mod.rs
picomint-bip39/: Cargo.toml
picomint-bip39/src/: lib.rs
picomint-bitcoind/: Cargo.toml
picomint-bitcoind/src/: bitcoincore.rs  lib.rs
picomint-client/: Cargo.toml
picomint-client-module/: Cargo.toml
picomint-client-module/src/: envs.rs  executor.rs  lib.rs  secret.rs
picomint-client-module/src/module/: init.rs  mod.rs  recovery.rs
picomint-client-module/src/transaction/: builder.rs  mod.rs  sm.rs
picomint-client/src/: client.rs  db.rs  envs.rs  executor.rs  lib.rs  secret.rs
picomint-client/src/api/: mod.rs  tests.rs
picomint-client/src/client/: builder.rs  handle.rs
picomint-client/src/gw/: api.rs  complete_sm.rs  db.rs  events.rs  mod.rs  receive_sm.rs  send_sm.rs
picomint-client/src/ln/: api.rs  db.rs  events.rs  gateway_http.rs  mod.rs  receive_sm.rs  send_sm.rs
picomint-client/src/mint/: api.rs  client_db.rs  ecash.rs  events.rs  issuance.rs  issuance_sm.rs  mod.rs
picomint-client/src/module/: init.rs  mod.rs  recovery.rs
picomint-client/src/transaction/: builder.rs  builder_next.rs  mod.rs  sm.rs
picomint-client/src/wallet/: api.rs  mod.rs  send_sm.rs
picomint-gateway-cli/: Cargo.toml
picomint-gateway-cli/src/: main.rs
picomint-gateway-daemon/: Cargo.toml
picomint-gateway-daemon/src/: cli.rs  client.rs  db.rs  lib.rs  main.rs  public.rs
picomint-integration-tests/: Cargo.toml
picomint-integration-tests/src/: cli.rs  env.rs  ln.rs  lnv2.rs  main.rs  mint.rs  mintv2.rs  restore.rs  wallet.rs  walletv2.rs
picomint-recurringd/: Cargo.toml  README.md
picomint-recurringd/src/: main.rs
picomint-recurringdv2/: Cargo.toml
picomint-recurringdv2/src/: main.rs
picomint-server-bitcoin-rpc/: Cargo.toml
picomint-server-bitcoin-rpc/src/: bitcoind.rs  esplora.rs  lib.rs
picomint-server-cli/: Cargo.toml
picomint-server-cli/src/: main.rs
picomint-server-core/: Cargo.toml
picomint-server-core/src/: bitcoin_rpc.rs  config.rs  lib.rs
picomint-server-daemon/: Cargo.toml
picomint-server-daemon/src/: cli.rs  lib.rs  main.rs  p2p.rs
picomint-server-daemon/src/config/: db.rs  dkg.rs  dkg_g1.rs  dkg_g2.rs  mod.rs  peer_handle.rs  setup.rs
picomint-server-daemon/src/consensus/: api.rs  db.rs  debug.rs  engine.rs  mod.rs  rpc.rs  server.rs  transaction.rs
picomint-server-daemon/src/consensus/aleph_bft/: backup.rs  data_provider.rs  keychain.rs  network.rs
picomint-server-daemon/src/consensus/ln/: db.rs  mod.rs  rpc.rs
picomint-server-daemon/src/consensus/mint/: db.rs  mod.rs  rpc.rs
picomint-server-daemon/src/consensus/wallet/: db.rs  mod.rs  rpc.rs
picomint-server-daemon/src/ui/: auth.rs  mod.rs  setup.rs
picomint-server-daemon/src/ui/dashboard/: audit.rs  bitcoin.rs  general.rs  invite.rs  latency.rs  mod.rs  peers.rs
picomint-server-daemon/src/ui/dashboard/modules/: ln.rs  lnv2.rs  mint.rs  mintv2.rs  wallet.rs  walletv2.rs
picomint-util-error/: Cargo.toml
(+590 files in other folders)
