[package]
authors = { workspace = true }
description = "Contains common structs and logic between the gateway client and server"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-gateway-common"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "fedimint_gateway_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
fedimint-core = { workspace = true }
lightning-invoice = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
