[package]
authors = { workspace = true }
description = "Fedimint gateway daemon"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-gateway-daemon"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "gatewayd"
path = "src/main.rs"

[lib]
name = "fedimint_gateway_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json"] }
bitcoin = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
erased-serde = { workspace = true }
esplora-client = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-bip39 = { workspace = true }
fedimint-bitcoind = { workspace = true, features = ["bitcoincore"] }
fedimint-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-connectors = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint-eventlog = { workspace = true }
fedimint-gateway-common = { workspace = true }
fedimint-gwv2-client = { workspace = true }
fedimint-lnurl = { workspace = true }
fedimint-lnv2-client = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-mintv2-client = { workspace = true }
fedimint-rocksdb = { workspace = true }
fedimint-walletv2-client = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
ldk-node = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
lockable = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors", "auth"] }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true, features = ["serde"] }

[target.'cfg(not(any(target_env = "msvc", target_os = "ios", target_os = "android")))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
fedimint-lnv2-server = { workspace = true }
fedimint-unknown-common = { workspace = true }
fedimint-unknown-server = { workspace = true }
itertools = { workspace = true }
tpe = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
