[package]
authors = { workspace = true }
description = "Standalone integration tests using in-process clients"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-integration-tests"
publish = false
version = { workspace = true }

[[bin]]
name = "fedimint-integration-tests"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-bip39 = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-eventlog = { workspace = true }
fedimint-gateway-cli-core = { workspace = true }
fedimint-lnv2-client = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-logging = { workspace = true }
fedimint-mintv2-client = { workspace = true }
fedimint-mintv2-common = { workspace = true }
fedimint-redb = { workspace = true }
fedimint-server-cli-core = { workspace = true }
fedimint-walletv2-client = { workspace = true }
fedimint-walletv2-common = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true, default-features = false }
ldk-node = { workspace = true }
lightning-invoice = { workspace = true }
lightning-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
