[package]
description = "LNURL types and utilities for Fedimint"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-lnurl"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
bech32 = { workspace = true }
lightning-invoice = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
url = { workspace = true }
