[package]
authors = { workspace = true }
description = "fedimint-redb provides a redb-backed database implementation for Fedimint."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-redb"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "fedimint_redb"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fedimint-core = { workspace = true }
futures = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
