[package]
authors = { workspace = true }
description = "Shared types for fedimint-server admin CLI"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-server-cli-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
fedimint-core = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
