[package]
authors = { workspace = true }
description = "CLI for fedimintd admin operations"
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-server-cli"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "fedimintd-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fedimint-server-cli-core = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
