[package]
authors = { workspace = true }
description = "fedimint-server-daemon facilitates federated consensus with atomic broadcast and distributed configuration. Produces the `fedimint-server-daemon` binary."
edition = { workspace = true }
license = { workspace = true }
name = "fedimint-server-daemon"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = []

[lib]
name = "fedimint_server_daemon"
path = "src/lib.rs"

[dependencies]
aleph-bft = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie", "form"] }
base64 = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true }
bls12_381 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fedimint-aead = { workspace = true }
fedimint-api-client = { workspace = true }
fedimint-client-module = { workspace = true }
fedimint-core = { workspace = true }
fedimint-derive-secret = { workspace = true }
fedimint-lnv2-common = { workspace = true }
fedimint-lnv2-server = { workspace = true }
fedimint-logging = { workspace = true, features = ["telemetry"] }
fedimint-mintv2-common = { workspace = true }
fedimint-mintv2-server = { workspace = true }
fedimint-redb = { workspace = true }
fedimint-server-bitcoin-rpc = { workspace = true }
fedimint-server-cli-core = { workspace = true }
fedimint-server-core = { workspace = true }
fedimint-walletv2-common = { workspace = true }
fedimint-walletv2-server = { workspace = true }
fedimintd-envs = { workspace = true }
futures = { workspace = true }
group = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
iroh = { workspace = true, default-features = false }
iroh-base = { workspace = true, default-features = false }
iroh-relay = { workspace = true, default-features = false }
itertools = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
maud = { workspace = true }
parity-scale-codec = { workspace = true }
pin-project = { workspace = true }
pkarr = { workspace = true, features = ["dht", "relays"] }
qrcode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
subtle = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
z32 = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[build-dependencies]
fedimint-build = { workspace = true }

[lints]
workspace = true
