[package]
authors = { workspace = true }
description = "picomint-api-client provides common code used by client."
edition = { workspace = true }
license = { workspace = true }
name = "picomint-api-client"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["tokio-test"]

[lib]
name = "picomint_api_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
picomint-core = { workspace = true }
picomint-encoding = { workspace = true }
picomint-ln-common = { workspace = true }
picomint-logging = { workspace = true }
picomint-mint-common = { workspace = true }
picomint-wallet-common = { workspace = true }
futures = { workspace = true }
iroh = { workspace = true, default-features = false }
iroh-base = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }

[lints]
workspace = true
