[package]
authors = { workspace = true }
description = "Bitcoin Core connectivity used by Picomint"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-bitcoind"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
bitcoincore = ["bitcoincore-rpc"]
default = []

[lib]
name = "picomint_bitcoind"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true, optional = true }
esplora-client = { workspace = true }
picomint-core = { workspace = true }
picomint-logging = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
