[package]
description = "Library for sending transactions to the Picomint federation."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "picomint-client-module"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# cargo udeps can't detect that one
normal = ["aquamarine"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "picomint_client_module"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
picomint-api-client = { workspace = true }
picomint-core = { workspace = true }
picomint-derive-secret = { workspace = true }
picomint-eventlog = { workspace = true }
picomint-logging = { workspace = true }
picomint-redb = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt"] }
tracing = { workspace = true }

[lints]
workspace = true
