[package]
description = "Library for sending transactions to the Picomint federation."
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "picomint-client"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.cargo-udeps.ignore]
# cargo udeps can't detect that one
normal = ["aquamarine"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "picomint_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true, features = ["rand-std"] }
picomint-api-client = { workspace = true }
picomint-client-module = { workspace = true }
picomint-core = { workspace = true }
picomint-derive-secret = { workspace = true }
picomint-eventlog = { workspace = true }
picomint-gw-client = { workspace = true }
picomint-ln-client = { workspace = true }
picomint-ln-common = { workspace = true }
picomint-logging = { workspace = true }
picomint-mint-client = { workspace = true }
picomint-redb = { workspace = true }
picomint-wallet-client = { workspace = true }
futures = { workspace = true }
iroh-base = { workspace = true, default-features = false }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
