[package]
authors = { workspace = true }
description = "Picomint gateway daemon"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-gateway-daemon"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_gateway_daemon"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json"] }
bitcoin = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
erased-serde = { workspace = true }
esplora-client = { workspace = true }
picomint-api-client = { workspace = true }
picomint-bip39 = { workspace = true }
picomint-bitcoind = { workspace = true, features = ["bitcoincore"] }
picomint-client = { workspace = true }
picomint-client-module = { workspace = true }
picomint-core = { workspace = true }
picomint-derive-secret = { workspace = true }
picomint-eventlog = { workspace = true }
picomint-gateway-cli-core = { workspace = true }
picomint-gw-client = { workspace = true }
picomint-lnurl = { workspace = true }
picomint-ln-client = { workspace = true }
picomint-ln-common = { workspace = true }
picomint-logging = { workspace = true }
picomint-mint-client = { workspace = true }
picomint-redb = { workspace = true }
picomint-wallet-client = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true, default-features = false }
ldk-node = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
lockable = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors", "auth"] }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
assert_matches = { workspace = true }
picomint-ln-server = { workspace = true }
itertools = { workspace = true }
tpe = { workspace = true }

[lints]
workspace = true
