[package]
authors = { workspace = true }
description = "CLI for picomintd admin operations"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-server-cli"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "picomint-server-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
picomint-server-cli-core = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
