[package]
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "picomint-server-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_server_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bls12_381 = { workspace = true }
picomint-core = { workspace = true }
picomint-redb = { workspace = true }
group = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
