[package]
authors = { workspace = true }
description = "picomint-server-daemon facilitates federated consensus with atomic broadcast and distributed configuration. Produces the `picomint-server-daemon` binary."
edition = { workspace = true }
license = { workspace = true }
name = "picomint-server-daemon"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = []

[lib]
name = "picomint_server_daemon"
path = "src/lib.rs"

[dependencies]
aleph-bft = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie", "form"] }
bitcoin = { workspace = true }
bls12_381 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
picomint-api-client = { workspace = true }
picomint-core = { workspace = true }
picomint-ln-common = { workspace = true }
picomint-ln-server = { workspace = true }
picomint-logging = { workspace = true }
picomint-mint-common = { workspace = true }
picomint-mint-server = { workspace = true }
picomint-redb = { workspace = true }
picomint-bitcoin-rpc = { workspace = true }
picomint-server-cli-core = { workspace = true }
picomint-server-core = { workspace = true }
picomint-wallet-common = { workspace = true }
picomint-wallet-server = { workspace = true }
futures = { workspace = true }
group = { workspace = true }
iroh = { workspace = true, default-features = false }
maud = { workspace = true }
parity-scale-codec = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true
