[package]
authors = { workspace = true }
description = "picomint-util-error provides error formatting utilities for the Picomint ecosystem."
edition = { workspace = true }
license = { workspace = true }
name = "picomint-util-error"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
name = "picomint_util_error"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
