[package]
authors = { workspace = true }
description = "picomint-gw-client is a crate for servicing lightning payments on behalf of picomint clients"
edition = { workspace = true }
license = { workspace = true }
name = "picomint-gw-client"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[package.metadata.cargo-udeps.ignore]
# cargo udeps can't detect that one
normal = ["aquamarine"]

[lib]
name = "picomint_gw_client"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
aquamarine = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
picomint-api-client = { workspace = true }
picomint-client-module = { workspace = true }
picomint-core = { workspace = true }
picomint-eventlog = { workspace = true }
picomint-ln-common = { workspace = true }
picomint-logging = { workspace = true }
picomint-redb = { workspace = true }
futures = { workspace = true }
lightning-invoice = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tpe = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[lints]
workspace = true
